
- Only Apollo 3 duel is active, which unlocks him and Joern as party members if you fight him
- Unlock Emilie on Rookie Harbor Intro
- Unlock C’tron on Maroon Tree quest
- Unlock Shizuka by fighting her in Old Hideout

# Rookie Harbor:

Intro with Emilie and Schneider now tied to “plot.autumnIntro” instead of “plot.line”
Access to North Marketplace not tied to plot.line, but to getting Flame Shade (0.0.2)

# Autumn's Rise / Guild Area

Guild Town is open only after meeting Schneider for the first time, with him giving you the Guild Pass.

# Bergen:

No Apollo 1 sequence
Bergen Mine Entrance not locked by being past plotline (just needs Mine Pass)
Bergen Elevator passage to Maroon Valley not locked by plotline
Guild entry plot sequence now tied to its own plot.line ("plot.guildEntry"). This is enabled after obtaining Mine Pass.

# Maroon Valley:

Ba’kii kum Eldress quest now tied to its own plotline ("plot.heatLine" instead of “plot.line”)
Can invite C’tron to party for Maroon Tree quest, or look for him next to West Entrance where he usually is (up until finishing the Maroon Tree quest)
No Apollo 2 sequence before Faj’ro
Forced Maroon Tree pass to enter Maroon Tree
Forced C’tron and Emilie when returning the Maroon Tree quest until you claim the Sand Shade reward

# Fajro Temple:

No logout or party member lock after Faj’ro temple
Disabled the cutscene when you enter the cross room in ground floor
Removed the movement from cutscene when you enter Cold Room so people dont get softlock by entering from different entrances
Change in a room in G-Room8 to not allow people exiting the map early (which otherwise leads to softlock / perma battle).

# Autumn’s Fall:

Added a Green Leaf Shade barrier on Autumn’s Rise entrance (to make the leaf shade slightly more useful later on)
Sapphire Ridge entrance is not locked anymore until post-kryskajo events
Gaias Garden entrance is not locked anymore until post-vermillion events