@@ -1,6 +1,7 @@
 [
     {
         "type": "ENTER",
+        "_comment": "Door not locked through story events",
         "index": ["entities",318,"settings"]
     },
 
@@ -17,6 +18,21 @@
         "count": 3
     },
     
+    {
+        "type": "ENTER",
+        "_comment": "Remove the barrier blocking the dungeon during Sephisloth events",
+        "index": ["entities",471,"settings"]
+    },
+    {
+        "type": "SET_KEY",
+        "index": "spawnCondition",
+        "content": "false"
+    },
+    {
+        "type": "EXIT",
+        "count": 3
+    },
+
     {
         "type": "ENTER",
         "index": ["entities"]
